[gd_scene load_steps=7 format=3 uid="uid://ovu1hbcclfqq"]

[ext_resource type="Script" uid="uid://b3p7162ey4782" path="res://scripts/dialog.gd" id="1_pkx4w"]
[ext_resource type="Texture2D" uid="uid://bef816edvcpop" path="res://addons/sprout_lands_ui/content/assets/Sprite sheet for Basic Pack.png" id="2_36pgd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmfn4"]
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36pgd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tmfn4"]
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0
texture = ExtResource("2_36pgd")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(107, 155, 26, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_auqi6"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 12.0
texture = ExtResource("2_36pgd")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(59, 155, 26, 26)

[node name="Dialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pkx4w")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tmfn4")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.0
offset_top = -57.5
offset_right = 241.0
offset_bottom = 57.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_36pgd")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_tmfn4")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Panel"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
autowrap_mode = 3

[node name="Panel2" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_auqi6")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Panel2"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Panel2/VBoxContainer"]
custom_minimum_size = Vector2(450, 50)
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/Panel2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="ConfirmButton" type="Button" parent="PanelContainer/VBoxContainer/Panel2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "OK"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Panel2/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
